Add Nullable suport
* Add boxed type support.
* Add @Required annotation.
* isNull and isNotNull support all nullable types now.
* equalTo query can take null as input param for nullable fields.
* Add functions for nullable related migration.
* JSON converter behavior changes for null value.
* Update test cases.